# lang-compiler

./: .gitignore  Makefile  README.md  code  code.lgn  code.lng  compile.py  compiler.py  hannah.code  hello_world  hello_world.ll  lexer.py  parser.out  parser.py  parsetab.py  print.lng  pyproject.toml  singleline.code
compiler/: compiler.py  lexer.py  parser.out  parser.py  parsetab.py
