[tool.poetry]
name = "lang_compiler"
version = "0.1.0"
description = ""
authors = ["Eric Gonzalez <eric@nunya.com>"]
readme = "README.md"
packages = [{include = "compiler"}]

[tool.poetry.dependencies]
python = "^3.11.2"
llvmlite = "^0.43.0"
ply = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
known_third_party = ["ply", "llvmlite"]

